# tierscape

./: .gitignore  Makefile  Makefile.masim  Makefile.memcached  README.md  requirements.txt  setup_tierscape.sh
exec_scripts/: redis.conf  start_benchmark_server.sh
exec_scripts/load_scripts/: load_memtier_memcached_40GB_1K.sh  load_memtier_memcached_40GB_4K.sh  load_memtier_memcached_4GB_4K.sh  load_memtier_redis_40GB_1K.sh  load_memtier_redis_40GB_4K.sh  load_ycsb_memcached.sh  load_ycsb_redis.sh
ilp_server/: CMakeLists.txt  README.md  get_latest_cmake_gcc_or_tools.sh  hotness_data  server.cpp  skd_ilp.cpp  skd_ilp.h
ilp_server/model/: comms_model.h
ilp_server/utils/: utils.cpp  utils.h  utils_ilp.cpp  utils_ilp.h  utils_server.cpp  utils_server.h
linux_patch/: 0001-tierscape-eurosys26.patch  0002-enabling-the-custom-syscall.patch  README.md
masim_mod/: .gitignore  Makefile  README.md  masim.c  masim.h  misc.c  misc.h
masim_mod/configs/: default  needle_5TB_4k  needle_5TB_5mb  stairs_100GB_10GB  stairs_100GB_10GB_orig  stairs_1TB_100g  stairs_1TB_100g_masim  stairs_5TB  stairs_5TB_100g  stairs_5TB_10g  stairs_plot_1gb  zigzag_plot_1gb.cfg
perf_scripts/: .gitignore  README.md  TODO  plot_all.sh  profile_config.sh  profile_driver.sh  run_profile.sh
perf_scripts/plotting/: plot_numastat.py  plot_ops_and_avgops.py  plot_pcm_bw.py  plot_perftrend_metric.py  plot_psi.py  plot_vmstat.py  (+2 more)
skd_daemon/: .gitignore  README.md  clean_dir.sh  plot_all.sh  run_all.sh  save_to_vcs.sh  skd_config.sh  skd_profile_driver.sh  start_fresh_ilp_server.sh  workloads
(+113 files in other folders)
